--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,6 +2,7 @@
   // Background colours
   --bg: #181818;
   --bgSoft: #d6d4bc;
+  --bgAlternative: #e3eec6;
   --shadow: #11111111;
 
   // Text colours
