--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -3,7 +3,7 @@
   <header class="postHeader">
     <h1 class="post-title">{{ .Title }}</h1>
     <p class="postDate">{{ .Date.Format "02 Jan 2006" }}</p>
-    {{ with .Params.image }}
+    {{ with .Params.imageBig }}
       <img src="{{ . }}" alt="{{ $.Title }}" class="post-featured-image"/>
     {{ end }}
     {{ with .Params.authors }}
@@ -13,7 +13,7 @@
       {{ .Params.description | default "No description provided." }}
     </p>
   </header>
-  <section class="blogContent">
+  <section class="markdownBody">
     {{ .Content }}
   </section>
   {{ with .Params.tags }}
