--- a/layouts/index.html
+++ b/layouts/index.html
@@ -69,8 +69,8 @@
             </section>
 
             <section class="card tipMeContainer">
-                <h3>Tip Me</h3>
-                <p>Fund my collection of arcane ingredients.</p>
+                <h3>Donations</h3>
+                <p>Should my scribblings please you, even a small contribution toward my humble work would be warmly welcomed.</p>
                 <a href="https://ko-fi.com/themysterycultist" target="_blank" class="custom-kofi-button">
                     Toss A Coin
                 </a>
