About page and about card added content.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,13 +31,15 @@
             <section class="card about-me">
                 <h2>About Me</h2>
                 <img src="/images/icon.webp" alt="MysteryCultist" class="about-img">
-                <p>Troupe-director, storyteller and dreamer. I am the Mystery Cultist and this is where you will find my horde of advice in the realms of stories and tales.</p>
+                <p>
+                    I am Quintino Gonzago, a master of a travelling troupe devoted to la commedia dell’arte and an ardent gamemaster of strange realms and stranger tales. Though no actor myself, I have long pursued the art of storytelling—guiding players through mystical lands, occult intrigues, and dice-fuelled destiny. This chronicle serves as both compass and cabinet: a place to muse, advise, and share the treasures I’ve gathered on this curious road.
+                </p>
             </section>
 
             <section class="card popular-posts">
                 <h3>My Recommendations</h3>
 
-                {{ with site.GetPage "posts/2025-06-24.md" }}
+                {{ with site.GetPage "posts/2025-06-26.md" }}
                 <a href="{{ .Permalink }}" class="slabCardLink">
                     <article class="card slabCard">
                     <div class="cardDescription">
@@ -47,7 +49,7 @@
                 </a>
                 {{ end }}
 
-                {{ with site.GetPage "posts/2025-06-24.md" }}
+                {{ with site.GetPage "posts/2025-06-26.md" }}
                 <a href="{{ .Permalink }}" class="slabCardLink">
                     <article class="card slabCard">
                     <div class="cardDescription">
@@ -57,7 +59,7 @@
                 </a>
                 {{ end }}
 
-                {{ with site.GetPage "posts/2025-06-24.md" }}
+                {{ with site.GetPage "posts/2025-06-26.md" }}
                 <a href="{{ .Permalink }}" class="slabCardLink">
                     <article class="card slabCard">
                     <div class="cardDescription">
