--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,6 +21,9 @@
                     {{ end }}
                 </h5>
                 <p>{{ .Params.description }}</p>
+                <h6>
+                    <h6>{{ delimit .Params.tags ", " }}</h6>
+                </h6>
                 </div>
             </article>
             </a>
@@ -32,7 +35,7 @@
                 <h2>About Me</h2>
                 <img src="/images/icon.webp" alt="MysteryCultist" class="about-img">
                 <p>
-                    I am Quintino Gonzago, a master of a travelling troupe devoted to la commedia dell’arte and an ardent gamemaster of strange realms and stranger tales. Though no actor myself, I have long pursued the art of storytelling—guiding players through mystical lands, occult intrigues, and dice-fuelled destiny. This chronicle serves as both compass and cabinet: a place to muse, advise, and share the treasures I’ve gathered on this curious road.
+                    Call me Quin, I am master to a travelling troupe devoted to <i>la commedia dell'arte</i> and dedicated gamemaster—teller of wild tales and gripping stories. My passion is guiding intrepid souls through mystical and occult lands through the medium of roleplaying games. Here, I chronicle my journey and my advice. Welcome, friend!
                 </p>
             </section>
 
