--- a/assets/sass/_markdown.scss
+++ b/assets/sass/_markdown.scss
@@ -3,7 +3,7 @@
   font-weight: 700;
   margin-top: 2rem;
   margin-bottom: 1rem;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 2px solid #868686;
 }
 
 .markdownBody h2 {
