--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,7 +35,7 @@
                 <h2>About Me</h2>
                 <img src="/images/icon.webp" alt="MysteryCultist" class="about-img">
                 <p>
-                    Greetings, I am Quin. Master of a travelling troupe devoted to <i>la commedia dell'arte</i> and dedicated gamemaster—teller of wild tales and gripping stories. My passion is guiding intrepid souls through mystical and occult lands through the medium of roleplaying games. Here, I chronicle my journey and my advice. Welcome, friend!
+                    Greetings, I am Quin. Master of a travelling troupe devoted to <i>la commedia dell'arte</i> and dedicated gamemaster—teller of wild tales and gripping stories. My passion is guiding intrepid souls through mystical and occult lands via the medium of roleplaying games. Here, I chronicle my journey and my advice. Be welcomed, friend!
                 </p>
             </section>
 
